propbankbr: version 1.0 updates

--- a/lr5.00e-03_hs8x8x8_ctx-p1/valid-eval.props
+++ b/lr5.00e-03_hs8x8x8_ctx-p1/valid-eval.props
@@ -50,8 +50,8 @@ desconhecer	(V*)
 -	*
 -	(A0*
 -	*)
--	*
--	*
+-	(AM-TMP*
+-	*)
 apontar	(V*)
 -	(A1*
 -	*
@@ -64,7 +64,7 @@ apontar	(V*)
 -	*
 -	*)
 sonhar	(V*)
--	(AM-MNR*
+-	(A2*
 -	*
 -	*
 -	*
@@ -135,9 +135,9 @@ passar	(V*)
 -	*
 -	*
 -	*
--	(A1*
 -	*
--	*)
+-	*
+-	*
 realizar	(V*)
 -	*
 -	*
@@ -161,9 +161,9 @@ realizar	(V*)
 -	*)
 -	*
 -	*
-trazer	(V*)
--	(A1*)
--	(AM-PNC*
+trazer	*
+-	(V*)
+-	(AM-EXT*
 -	*
 -	*
 -	*
@@ -185,12 +185,12 @@ vir	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
--	*
 -	*
 -	*
 -	*
@@ -236,8 +236,8 @@ morrer	(V*)
 -	(A1*)
 -	*
 ficar	(V*)
--	(A2*
--	*
+-	(A2*)
+-	(AM-CAU*
 -	*
 -	*
 -	*
@@ -269,7 +269,7 @@ subir	(V*)
 -	(A1*
 -	*
 -	*)
--	(AM-TMP*
+-	(AM-MNR*
 -	*)
 -	*
 
@@ -376,19 +376,19 @@ garantir	(V*)
 produzir	(V*)
 -	(A0*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 
 -	*
@@ -404,11 +404,11 @@ ter	(V*)
 -	*
 -	*
 
--	*
--	*
--	*
--	*
 -	(A1*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*)
@@ -473,12 +473,12 @@ evitar	(V*)
 -	*
 -	*
 -	*
+-	(AM-TMP*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 -	*
 ter	(V*)
@@ -508,8 +508,8 @@ reajustar	(V*)
 -	*
 -	*
 -	*
--	*)
--	(AM-TMP*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -537,7 +537,7 @@ dizer	(V*)
 
 -	*
 beneficiar	(V*)
--	(AM-CAU*
+-	(AM-ADV*
 -	*
 -	*
 -	*
@@ -562,9 +562,9 @@ beneficiar	(V*)
 demorar	(V*)
 -	(AM-TMP*
 -	*
--	*
 -	*)
--	(A1*
+-	(AM-PNC*
+-	*
 -	*
 -	*
 -	*
@@ -649,32 +649,32 @@ ter	(V*)
 -	*
 -	(A0*)
 dizer	(V*)
--	(A0*
+-	(A1*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
 -	*)
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 
 -	*
 -	(A0*)
--	(AM-REC*)
+-	*
 ter	(V*)
 -	(A1*
 -	*
@@ -753,11 +753,11 @@ ver	(V*)
 -	(AM-TMP*)
 -	*
 
+-	(A0*
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 -	*
 -	*
@@ -785,7 +785,7 @@ precisar	(V*)
 -	*
 -	(A0*)
 ir	(V*)
--	(A4*
+-	(AM-MNR*
 -	*)
 
 -	(A0*
@@ -799,7 +799,7 @@ ir	(V*)
 fazer	(V*)
 -	(A1*
 -	*)
--	(AM-TMP*
+-	(AM-CAU*
 -	*
 -	*
 -	*
@@ -838,7 +838,6 @@ atacar	(V*)
 -	*
 -	*
 -	*
--	(AM-TMP*
 -	*
 -	*
 -	*
@@ -853,7 +852,8 @@ atacar	(V*)
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 
 -	*
@@ -888,6 +888,7 @@ ter	(V*)
 -	*
 -	*
 
+-	(A1*
 -	*
 -	*
 -	*
@@ -897,12 +898,11 @@ ter	(V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 ficar	(V*)
--	(A2*)
--	(AM-CAU*
+-	(A2*
+-	*
 -	*
 -	*
 -	*
@@ -1001,11 +1001,11 @@ afetar	(V*)
 -	*
 -	*
 -	*
+-	(A0*
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 fazer	(V*)
 -	(A1*
@@ -1054,8 +1054,8 @@ levantar	(V*)
 -	*
 -	*
 -	*
--	*)
 -	*
+-	*)
 -	*
 confirmar	(V*)
 -	(AM-LOC*
@@ -1125,6 +1125,22 @@ condenar	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*)
+-	*
+
+-	(A1*)
+-	*
+punir	(V*)
+-	(A2*
+-	*
 -	*)
 -	*
 -	*
@@ -1133,26 +1149,10 @@ condenar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
 
--	(A1*)
+-	(A1*
 -	*
-punir	(V*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
-
--	(A1*)
--	*
--	*
+-	*)
 -	*
 -	*
 -	*
@@ -1198,7 +1198,7 @@ anunciar	(V*)
 -	(A1*
 -	*)
 ficar	(V*)
--	(AM-MNR*
+-	(A2*
 -	*
 -	*
 -	*
@@ -1241,11 +1241,11 @@ dar	(V*)
 
 -	*
 -	*
--	*
--	*
--	(A0*)
-atender	(V*)
 -	(A1*
+-	*
+-	*
+atender	*
+-	*
 -	*)
 
 -	(A1*
@@ -1260,12 +1260,12 @@ atender	(V*)
 -	*
 -	*
 dizer	(V*)
--	(A0*)
+-	(A0*
 -	*
 -	*
 -	*
 -	*
--	*
+-	*)
 -	*
 
 -	(A0*
@@ -1293,6 +1293,7 @@ faltar	(V*)
 -	*
 -	*
 viver	(V*)
+-	(C-V*)
 -	(A1*
 -	*
 -	*
@@ -1303,10 +1304,8 @@ viver	(V*)
 -	*
 -	*
 -	*
--	*
 -	*)
 -	*
--	(AM-TMP*
 -	*
 -	*
 -	*
@@ -1314,7 +1313,8 @@ viver	(V*)
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 
 -	(A0*
@@ -1353,10 +1353,10 @@ dizer	(V*)
 -	*
 -	*
 
+-	(A0*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 -	*
 -	*
@@ -1422,11 +1422,11 @@ renovar	(V*)
 -	*
 -	*)
 -	*
+-	(AM-MNR*
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 
 -	*
@@ -1646,10 +1646,10 @@ descumprir	(V*)
 -	*
 -	*
 -	*
+-	(A1*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 chegar	(V*)
 -	(A2*
@@ -1666,12 +1666,12 @@ chegar	(V*)
 -	*
 -	*
 -	*
--	*
+-	(AM-TMP*)
 -	*
 aplicar	(V*)
 -	(A1*
--	*
--	*
+-	*)
+-	(A2*
 -	*
 -	*
 -	*)
@@ -1775,8 +1775,8 @@ aconselhar	(V*)
 
 -	(A0*
 -	*
--	*
 -	*)
+-	(AM-ADV*)
 -	(V*)
 conversar	(AM-TMP*)
 -	(A1*
@@ -1795,9 +1795,9 @@ conversar	(AM-TMP*)
 -	*
 -	*
 -	*
+-	(AM-TMP*
 -	*
--	*
--	*
+-	*)
 -	*
 -	*
 reverter	(V*)
@@ -1818,8 +1818,8 @@ reverter	(V*)
 -	*
 -	(A0*
 -	*)
-perder	(V*)
--	(C-V*)
+perder	(AM-REC*)
+-	(V*)
 -	(A1*)
 
 -	(A1*
@@ -1833,13 +1833,13 @@ perder	(V*)
 fazer	(V*)
 -	(A1*
 -	*)
--	(AM-LOC*
+-	(AM-MNR*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*)
--	*
--	*
--	*
--	*
 -	*
 
 -	*
@@ -1857,7 +1857,7 @@ fazer	(V*)
 -	*
 -	*
 -	*
--	*
+-	(AM-TMP*)
 -	*
 criticar	(V*)
 -	*
@@ -1880,9 +1880,9 @@ cumprir	(V*)
 -	*
 -	*
 
+-	(AM-DIS*
 -	*
--	*
--	*
+-	*)
 -	*
 -	(A0*)
 preferir	(V*)
@@ -1938,6 +1938,7 @@ querer	(V*)
 -	*
 -	*
 
+-	(A0*
 -	*
 -	*
 -	*
@@ -1960,10 +1961,9 @@ querer	(V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 simpatizar	(V*)
--	(A1*
+-	(A2*
 -	*
 -	*
 -	*
@@ -2068,20 +2068,20 @@ narrar	(V*)
 haver	(V*)
 -	(A1*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 
 -	*
@@ -2126,7 +2126,7 @@ ocorrer	(V*)
 -	(A1*)
 -	*
 colocar	(V*)
--	(A4*
+-	(A2*
 -	*
 -	*
 -	*
@@ -2137,14 +2137,14 @@ colocar	(V*)
 
 -	(AM-ADV*
 -	*
+-	*)
 -	*
--	*
--	*
--	*
+-	(A0*
 -	*
 -	*
 -	*
 -	*)
+-	(AM-NEG*)
 chegar	(V*)
 -	(AM-LOC*
 -	*
@@ -2165,7 +2165,27 @@ chegar	(V*)
 -	*
 -	*)
 dar	(V*)
--	(A1*
+-	(A1*)
+-	(A2*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -2173,26 +2193,6 @@ dar	(V*)
 -	*
 -	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 
 -	*
@@ -2233,7 +2233,7 @@ dar	(V*)
 -	*
 -	*
 -	*
--	(A0*
+-	(A1*
 -	*)
 -	*
 expulsar	(V*)
@@ -2261,7 +2261,7 @@ adotar	(V*)
 -	(A1*
 -	*
 -	*)
--	(AM-MNR*
+-	(A2*
 -	*
 -	*
 -	*
@@ -2314,10 +2314,10 @@ reduzir	(V*)
 -	*)
 -	*
 -	*
-dizer	(V*)
--	(A1*
+dizer	*
 -	*
--	*)
+-	*
+-	*
 -	*
 
 -	(A1*
@@ -2431,7 +2431,7 @@ estar	(V*)
 -	*
 -	*)
 -	*
--	(AM-PRD*
+-	(A2*
 -	*
 -	*
 -	*
@@ -2448,7 +2448,7 @@ estar	(V*)
 -	*)
 -	*
 
--	(AM-LOC*
+-	(AM-TMP*
 -	*
 -	*)
 -	*
@@ -2521,7 +2521,7 @@ firmar	(V*)
 -	*
 -	(A1*)
 valer	(V*)
--	(A4*
+-	(AM-CAU*
 -	*
 -	*
 -	*
@@ -2540,7 +2540,6 @@ crescer	(V*)
 -	*
 -	*
 -	*)
--	(AM-TMP*
 -	*
 -	*
 -	*
@@ -2553,14 +2552,15 @@ crescer	(V*)
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 
 -	(AM-LOC*
 -	*
 -	*)
 -	*
--	(A0*
+-	(A1*
 -	*)
 -	*
 -	*
@@ -2573,8 +2573,8 @@ elevar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
+-	(AM-MNR*
 -	*
 -	*
 -	*
@@ -2589,8 +2589,8 @@ elevar	(V*)
 -	*
 -	*
 -	*
--	*)
-divulgar	(V*)
+-	*
+divulgar	*)
 -	(AM-TMP*)
 -	(A1*
 -	*
@@ -2601,8 +2601,8 @@ divulgar	(V*)
 -	*
 -	*
 -	*
--	*)
--	(AM-TMP*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -2706,7 +2706,7 @@ conseguir	(V*)
 
 -	*
 estar	(V*)
--	(AM-MNR*
+-	(A2*
 -	*
 -	*
 -	*
@@ -3005,8 +3005,8 @@ haver	(V*)
 -	*
 substituir	(V*)
 -	(A0*)
--	*
--	(AM-PRD*
+-	(V*)
+-	(A2*
 -	*
 -	*
 -	*
@@ -3034,7 +3034,7 @@ substituir	(V*)
 -	*
 -	*
 ter	(V*)
--	(A1*
+-	(A2*
 -	*
 -	*
 -	*
@@ -3069,7 +3069,7 @@ jogar	(V*)
 -	*
 -	*
 
--	(AM-DIS*
+-	(AM-TMP*
 -	*)
 -	*
 -	(A0*)
@@ -3092,8 +3092,8 @@ avaliar	(V*)
 -	*)
 -	*
 
--	*
--	*
+-	(A0*
+-	*)
 -	*
 -	*
 -	*
@@ -3186,6 +3186,8 @@ iniciar	(V*)
 inspirar	(V*)
 -	(AM-LOC*
 -	*
+-	*)
+-	(A1*
 -	*
 -	*
 -	*
@@ -3195,8 +3197,6 @@ inspirar	(V*)
 -	*
 -	*
 -	*)
--	*
--	*
 -	*
 
 -	(A0*
@@ -3220,11 +3220,11 @@ ver	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
 -	*
 
 -	*
@@ -3284,10 +3284,10 @@ afirmar	(V*)
 -	*)
 -	*
 
--	(A1*)
+-	(A0*)
 -	*
 achar	(V*)
--	(A2*)
+-	(C-V*)
 -	(AM-LOC*
 -	*
 -	*)
@@ -3343,7 +3343,7 @@ dizer	(V*)
 -	*
 sequestrar	*
 -	(V*)
--	(A1*
+-	(A0*
 -	*
 -	*
 -	*
@@ -3374,9 +3374,9 @@ confundir	(V*)
 -	(A1*)
 -	*
 receber	(V*)
--	(A2*
--	*)
--	(AM-LOC*
+-	(A3*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -3393,7 +3393,7 @@ receber	(V*)
 -	*)
 -	*
 receber	(V*)
--	(A1*
+-	(A2*
 -	*
 -	*
 -	*
@@ -3488,7 +3488,7 @@ ficar	(V*)
 -	*
 -	(A0*)
 contar	(V*)
--	(A1*
+-	(A2*
 -	*
 -	*
 -	*
@@ -3515,8 +3515,8 @@ ficar	(V*)
 -	*
 -	*
 -	*
--	*)
--	(AM-PRD*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -3598,12 +3598,12 @@ marcar	(V*)
 -	*)
 -	*
 
+-	(A1*
+-	*
+-	*
+-	*
+-	*)
 -	(A0*
--	*
--	*
--	*
--	*
--	*
 -	*)
 participar	(V*)
 -	(A1*
@@ -3621,15 +3621,15 @@ participar	(V*)
 -	*)
 -	*
 
+-	(AM-DIS*
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 -	(A1*)
 estar	(V*)
--	(A2*)
+-	(A2*
 -	*
 -	*
 -	*
@@ -3638,7 +3638,7 @@ estar	(V*)
 -	*
 -	*
 -	*
--	*
+-	*)
 -	*
 
 -	(A1*
@@ -3833,11 +3833,11 @@ estar	(V*)
 -	(AM-LOC*
 -	*
 -	*
--	*
--	*
+-	*)
+-	(A1*
 -	*
 -	*)
--	(AM-MNR*
+-	(A2*
 -	*
 -	*
 -	*
@@ -4016,15 +4016,15 @@ fazer	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 
 -	*
@@ -4130,21 +4130,21 @@ pôr	(V*)
 interpretar	(V*)
 -	(A1*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 
 -	*
@@ -4162,7 +4162,7 @@ interpretar	(V*)
 -	*
 -	*
 -	*
--	*
+-	(A0*)
 fazer	(V*)
 -	(A2*
 -	*
@@ -4195,22 +4195,22 @@ dirigir	(V*)
 -	*)
 -	*
 
--	(A1*
--	*)
+-	(A0*)
+-	(AM-NEG*)
 estar	(V*)
 -	(A2*
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 -	*
 -	*
@@ -4256,27 +4256,27 @@ estar	(V*)
 -	*)
 -	(AM-NEG*)
 resistir	(V*)
--	(A1*
+-	(A2*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
 -	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 
 -	*
@@ -4307,7 +4307,7 @@ resistir	(V*)
 -	*
 -	(A0*)
 pagar	(V*)
--	(A1*
+-	(A2*
 -	*
 -	*)
 -	*
@@ -4327,6 +4327,7 @@ pagar	(V*)
 -	*
 -	*
 -	*
+-	(A0*
 -	*
 -	*
 -	*
@@ -4349,8 +4350,7 @@ pagar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 filmar	(V*)
 -	*
 -	*
@@ -4363,8 +4363,8 @@ filmar	(V*)
 -	*
 -	*
 
--	*
 -	(A1*
+-	*
 -	*
 -	*
 -	*
@@ -4372,7 +4372,8 @@ filmar	(V*)
 -	*
 -	*
 fazer	(V*)
--	(A3*
+-	(A2*
+-	*
 -	*
 -	*
 -	*
@@ -4383,7 +4384,6 @@ fazer	(V*)
 -	*
 -	*
 -	*)
--	*
 -	*
 -	*
 -	*
@@ -4406,9 +4406,9 @@ fazer	(V*)
 -	*
 -	*
 -	*
--	*
 -	*)
 -	(AM-PNC*
+-	*
 -	*
 -	*
 -	*
@@ -4481,7 +4481,7 @@ vencer	(V*)
 -	(AM-ADV*)
 bastar	(V*)
 -	*
--	(A1*
+-	(A2*
 -	*
 -	*
 -	*
@@ -4510,7 +4510,7 @@ bastar	(V*)
 -	*
 -	(A0*
 -	*)
--	(AM-ADV*)
+-	(AM-TMP*)
 -	*
 chegar	(V*)
 -	(AM-MNR*
@@ -4549,7 +4549,7 @@ ancorar	(V*)
 -	(A0*)
 -	*
 tornar	(V*)
--	(A1*
+-	(A2*
 -	*
 -	*
 -	*
@@ -4574,12 +4574,12 @@ haver	(V*)
 querer	(V*)
 -	*
 -	*
--	(AM-LOC*
 -	*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -4588,14 +4588,14 @@ querer	(V*)
 -	*
 -	*
 ir	(V*)
--	(A3*
+-	(A2*
+-	*
+-	*
 -	*
 -	*
 -	*
 -	*
 -	*)
--	*
--	*
 -	*
 
 -	(AM-DIS*
@@ -4612,8 +4612,8 @@ dispensar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
+-	(AM-ADV*
 -	*
 -	*
 -	*
@@ -4682,7 +4682,7 @@ defender	(V*)
 
 -	*
 chegar	(V*)
--	(AM-CAU*
+-	(A2*
 -	*
 -	*
 -	*
@@ -4721,7 +4721,7 @@ jogar	(V*)
 -	(A1*
 -	*)
 estar	(V*)
--	(AM-TMP*
+-	(AM-MNR*
 -	*
 -	*
 -	*)
@@ -4768,8 +4768,8 @@ existir	(V*)
 -	*
 -	*
 
--	*
--	*
+-	(A0*
+-	*)
 -	*
 -	*
 -	*
@@ -4791,6 +4791,7 @@ engatinhar	(V*)
 -	*)
 -	*
 
+-	(A0*
 -	*
 -	*
 -	*
@@ -4799,9 +4800,8 @@ engatinhar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
+-	*)
+-	(AM-DIS*)
 -	*
 -	(AM-ADV*)
 aparecer	(V*)
@@ -4823,7 +4823,33 @@ aparecer	(V*)
 -	(A0*
 -	*)
 querer	(V*)
--	(A1*
+-	(A2*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -4831,32 +4857,6 @@ querer	(V*)
 -	*
 -	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 
 -	(A0*)
@@ -4905,8 +4905,8 @@ ter	(AM-REC*)
 
 -	*
 -	(A0*)
-ter	(V*)
--	(AM-NEG*)
+ter	(AM-REC*)
+-	(V*)
 -	*
 -	*
 -	*
@@ -5024,9 +5024,9 @@ enfrentar	(V*)
 -	*)
 -	*
 
+-	(A0*)
+-	*
 -	(A0*
--	*
--	*
 -	*)
 achar	(V*)
 -	(A1*
@@ -5073,9 +5073,9 @@ estimular	(V*)
 -	*
 -	(A0*)
 estimular	(V*)
--	(AM-LOC*
--	*)
--	(A1*
+-	(A2*
+-	*
+-	*
 -	*
 -	*
 -	*
