--- a/lr5.00e-03_hs32_ctx-p1/best-valid-eval.props
+++ b/lr5.00e-03_hs32_ctx-p1/best-valid-eval.props
@@ -1,19 +1,19 @@
--	(AM-DIS*
 -	*
--	*)
+-	*
 -	(A0*
+-	*
 -	*
 -	*)
 desconhecer	(V*)
+-	*
+-	(AM-LOC*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*)
 -	(A1*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 -	*
 -	*
@@ -29,12 +29,12 @@ desconhecer	(V*)
 -	*)
 -	*
 
--	(AM-DIS*
 -	*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -71,11 +71,11 @@ sonhar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -99,13 +99,13 @@ sonhar	(V*)
 chegar	(V*)
 -	(A1*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
 passar	(V*)
@@ -135,8 +135,8 @@ passar	(V*)
 -	*
 -	*
 -	*
--	(A0*
--	*)
+-	*
+-	*
 -	(AM-REC*)
 realizar	(V*)
 -	*
@@ -163,8 +163,8 @@ realizar	(V*)
 -	*
 trazer	(V*)
 -	(A1*
+-	*
 -	*)
--	(AM-DIS*)
 -	*
 -	*
 -	*
@@ -185,12 +185,12 @@ vir	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -266,7 +266,7 @@ ficar	(V*)
 -	*
 -	*
 subir	(V*)
--	(A1*
+-	(A4*
 -	*
 -	*
 -	*
@@ -275,8 +275,8 @@ subir	(V*)
 
 -	(A0*
 -	*)
-pedir	(V*)
--	(A1*)
+pedir	*
+-	*
 -	*
 -	*
 -	*
@@ -323,9 +323,9 @@ apurar	(V*)
 -	*)
 -	*
 
--	(AM-TMP*
 -	*
--	*)
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -355,10 +355,10 @@ corrigir	(V*)
 -	*
 -	*
 
+-	(A0*
+-	*)
+-	*
 -	(A1*
--	*
--	*
--	*
 -	*
 -	*
 -	*
@@ -371,12 +371,12 @@ garantir	(V*)
 
 -	(A1*
 -	*
--	*
 -	*)
+-	*
 produzir	(V*)
 -	(A0*
--	*
--	*
+-	*)
+-	(AM-LOC*
 -	*
 -	*
 -	*
@@ -411,18 +411,18 @@ ter	(V*)
 -	*
 -	*
 -	*
--	*
 -	*)
+-	*
 -	*
 explicar	(V*)
 -	*
 
--	(A1*
 -	*
 -	*
--	*)
 -	*
 -	*
+-	*
+-	(AM-NEG*)
 -	*
 fixar	(V*)
 -	(A2*
@@ -490,25 +490,25 @@ ter	(V*)
 -	*
 
 -	*
--	(AM-ADV*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*)
--	*
--	*
-reajustar	(V*)
 -	(A1*
 -	*
 -	*
+-	*)
+-	(AM-MNR*
+-	*
+-	*
 -	*
 -	*
 -	*)
+-	*
+-	*
+reajustar	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	(AM-TMP*
 -	*
 -	*
@@ -530,14 +530,14 @@ reajustar	(V*)
 -	*
 -	*
 -	*
--	*
 -	*)
+-	*
 dizer	(V*)
 -	*
 
 -	*
 beneficiar	(V*)
--	(C-A1*
+-	(AM-EXT*
 -	*
 -	*
 -	*
@@ -562,6 +562,8 @@ beneficiar	(V*)
 demorar	*
 -	*
 -	*
+-	*
+-	*
 -	*)
 -	(A1*
 -	*
@@ -570,10 +572,8 @@ demorar	*
 -	*
 -	*
 -	*
--	*
--	*
--	*
 -	*)
+-	*
 
 -	*
 -	*
@@ -609,9 +609,7 @@ ganhar	(V*)
 ter	(V*)
 -	(A1*
 -	*
--	*
 -	*)
--	(AM-DIS*
 -	*
 -	*
 -	*
@@ -619,7 +617,9 @@ ter	(V*)
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -646,30 +646,30 @@ ter	(V*)
 -	*
 -	*
 -	*
--	(A0*
--	*)
+-	*
+-	*
 dizer	(V*)
 -	(A1*
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	*
@@ -812,11 +812,11 @@ fazer	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
 -	*)
--	(A0*
+-	(A4*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -838,7 +838,6 @@ atacar	(V*)
 -	*
 -	*
 -	*
--	(A2*
 -	*
 -	*
 -	*
@@ -853,57 +852,58 @@ atacar	(V*)
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 
 -	(A1*
 -	*
 -	*
 -	*
+-	*
 -	*)
--	(AM-TMP*)
 -	(AM-NEG*)
 ter	(V*)
--	(A2*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
+-	(A1*
 -	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	(A1*
--	*
--	*)
--	*
--	*
--	*
--	*
--	*
--	(A1*
--	*
 -	*)
 -	*
 ficar	(V*)
 -	(A2*
--	*
--	*
+-	*)
+-	(AM-TMP*
 -	*
 -	*
 -	*
@@ -1058,7 +1058,7 @@ levantar	(V*)
 -	*
 -	*
 confirmar	(V*)
--	(A1*
+-	(AM-LOC*
 -	*
 -	*)
 -	*
@@ -1092,11 +1092,12 @@ acusar	(V*)
 -	*
 -	*
 -	*
--	*)
 -	*
+-	*)
 -	*
 comparecer	(V*)
 -	(AM-TMP*
+-	*
 -	*)
 -	(A1*
 -	*
@@ -1104,21 +1105,20 @@ comparecer	(V*)
 -	*
 -	*
 -	*
--	*
 -	*)
 -	*
 
--	(A0*)
+-	*
 -	*
 acusar	(V*)
--	(A2*
+-	(A1*
 -	*)
 -	*
 
 -	*
 -	*
 condenar	(V*)
--	(A2*
+-	(AM-LOC*
 -	*
 -	*
 -	*
@@ -1129,11 +1129,11 @@ condenar	(V*)
 -	*
 -	*
 -	*
+-	(AM-LOC*
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 
 -	(A1*)
@@ -1222,12 +1222,12 @@ começar	(V*)
 -	*
 -	*
 -	*
--	*)
--	(A1*
--	*
 -	*
 -	*
 -	*)
+-	*
+-	*
+-	*
 -	*
 
 -	*
@@ -1288,11 +1288,13 @@ faltar	(V*)
 -	*
 -	*)
 
--	(A0*
--	*)
+-	*
+-	*
 -	*
 -	*
 viver	(V*)
+-	(A1*
+-	*)
 -	(A2*
 -	*
 -	*
@@ -1302,11 +1304,9 @@ viver	(V*)
 -	*
 -	*
 -	*
+-	*)
 -	*
--	*
--	*
--	*
--	*
+-	(AM-LOC*
 -	*
 -	*
 -	*
@@ -1330,15 +1330,15 @@ viver	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
+-	*)
+-	(AM-TMP*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*)
+-	*
 dizer	(V*)
 -	(A1*
 -	*
@@ -1349,8 +1349,8 @@ dizer	(V*)
 -	*
 -	*
 -	*
--	*
 -	*)
+-	*
 -	*
 
 -	*
@@ -1380,9 +1380,9 @@ dizer	(V*)
 -	*
 -	*
 faltar	(V*)
--	(A1*
+-	(A1*)
 -	*
--	*)
+-	*
 -	*
 -	*
 -	*
@@ -1420,13 +1420,13 @@ ter	(V*)
 renovar	(V*)
 -	(A1*
 -	*
+-	*
+-	*
 -	*)
+-	(AM-TMP*
 -	*
 -	*
--	*
--	*
--	*
--	*
+-	*)
 -	*
 
 -	*
@@ -1435,14 +1435,14 @@ renovar	(V*)
 acontecer	(V*)
 -	*
 -	*
--	(A1*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -1465,8 +1465,8 @@ acontecer	(V*)
 -	*
 -	*
 -	*
--	*
 -	*)
+-	*
 -	*
 afirmar	(V*)
 -	*
@@ -1484,32 +1484,32 @@ saber	(V*)
 -	*
 -	*
 -	*
+-	*)
 -	*
--	*
--	*
+-	(AM-LOC*
 -	*)
 -	*
 -	(A0*)
 começar	(V*)
 -	(A1*
 -	*
+-	*)
+-	(AM-LOC*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 
 -	*
@@ -1582,7 +1582,7 @@ disputar	(V*)
 -	*
 -	*
 terminar	(V*)
--	(A1*
+-	(AM-LOC*
 -	*
 -	*)
 -	*
@@ -1617,11 +1617,11 @@ autuar	(V*)
 -	(A0*)
 -	(AM-NEG*)
 apresentar	(V*)
--	(A2*
+-	(A1*
 -	*
 -	*
--	*
--	*
+-	*)
+-	(AM-LOC*
 -	*
 -	*)
 -	*
@@ -1633,8 +1633,8 @@ apresentar	(V*)
 -	(A0*)
 descumprir	(V*)
 -	(A1*
--	*
 -	*)
+-	*
 -	(AM-TMP*
 -	*
 -	*
@@ -1642,29 +1642,29 @@ descumprir	(V*)
 -	*)
 -	*
 
--	(A0*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 chegar	(V*)
--	(A1*
+-	(AM-EXT*
 -	*
 -	*
 -	*)
 -	*
 
 -	(AM-DIS*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -1694,14 +1694,6 @@ produzir	(V*)
 -	*)
 -	*
 instalar	(V*)
--	(A2*
--	*
--	*
--	*
--	*
--	*
--	*
--	*)
 -	(A1*
 -	*
 -	*
@@ -1713,19 +1705,27 @@ instalar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	(A1*
@@ -1779,7 +1779,7 @@ aconselhar	(V*)
 -	*
 -	*
 conversar	(V*)
--	(A1*
+-	(A2*
 -	*
 -	*)
 -	*
@@ -1822,20 +1822,20 @@ perder	(V*)
 -	*
 -	*
 
--	(A0*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 fazer	(V*)
 -	(A1*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -1869,14 +1869,14 @@ criticar	(V*)
 -	*
 cumprir	(V*)
 -	(A1*
--	*)
--	(AM-CAU*
--	*
--	*
 -	*
 -	*
 -	*
 -	*)
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 
@@ -1888,8 +1888,8 @@ cumprir	(V*)
 preferir	(V*)
 -	(A1*
 -	*
--	*
 -	*)
+-	*
 
 -	*
 -	*
@@ -2059,8 +2059,8 @@ narrar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
+-	(AM-LOC*
 -	*
 -	*)
 -	*
@@ -2079,8 +2079,8 @@ haver	(V*)
 -	*
 -	*
 -	*
--	*
 -	*)
+-	*
 -	*
 -	*
 
@@ -2089,27 +2089,27 @@ haver	(V*)
 -	*
 -	*
 -	*
--	(AM-CAU*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
+-	(A1*)
+-	(AM-TMP*
 -	*
 -	*)
+-	(AM-REC*)
 separar	(V*)
 -	*
 
 -	*
 -	(A1*)
 ocorrer	(V*)
--	(A1*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	(AM-LOC*
 -	*
 -	*
@@ -2119,9 +2119,9 @@ ocorrer	(V*)
 -	*)
 -	*
 
--	(AM-ADV*
 -	*
--	*)
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -2151,7 +2151,6 @@ chegar	(V*)
 -	*)
 -	*
 
--	(A0*
 -	*
 -	*
 -	*
@@ -2163,12 +2162,13 @@ chegar	(V*)
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 dar	(V*)
--	(A2*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -2195,18 +2195,18 @@ dar	(V*)
 -	*
 -	*
 
+-	*
+-	*
 -	(A1*
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -2284,12 +2284,12 @@ forçar	(V*)
 -	*
 -	*
 -	*
--	(AM-PNC*
--	*
--	*
--	*
--	*)
 -	(AM-TMP*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
 -	*
 
@@ -2315,9 +2315,9 @@ reduzir	(V*)
 -	*)
 -	*
 dizer	(V*)
--	(A0*
+-	(A0*)
 -	*
--	*)
+-	*
 -	*
 
 -	(A1*
@@ -2328,29 +2328,29 @@ estar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	*
@@ -2372,18 +2372,18 @@ estar	(V*)
 ir	(V*)
 -	(AM-PNC*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	*
@@ -2429,43 +2429,43 @@ vetar	(V*)
 estar	(V*)
 -	(AM-LOC*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
 -	*
--	(A2*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
+-	(AM-LOC*
 -	*
 -	*)
 -	*
 
 -	(AM-TMP*
 -	*
+-	*)
 -	*
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	(AM-LOC*
 -	*
 -	*
 -	*
 -	*)
 -	(A0*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 -	*
 -	*
@@ -2521,7 +2521,7 @@ firmar	(V*)
 -	*
 -	(A0*)
 valer	(V*)
--	(A2*
+-	(AM-TMP*
 -	*
 -	*
 -	*
@@ -2574,8 +2574,8 @@ elevar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
+-	(C-A1*
 -	*
 -	*
 -	*
@@ -2624,12 +2624,12 @@ divulgar	(V*)
 -	*)
 -	*
 
--	(A0*
 -	*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -2675,7 +2675,6 @@ demonstrar	(V*)
 -	*
 -	*
 -	*
--	(AM-ADV*
 -	*
 -	*
 -	*
@@ -2690,6 +2689,7 @@ demonstrar	(V*)
 -	*
 -	*
 -	*
+-	(A0*
 -	*)
 conseguir	(V*)
 -	(A1*
@@ -2704,9 +2704,9 @@ conseguir	(V*)
 -	*)
 -	*
 
--	(AM-ADV*)
+-	*
 estar	(V*)
--	(A1*
+-	(AM-TMP*
 -	*
 -	*
 -	*
@@ -2762,7 +2762,6 @@ escolher	*
 -	*
 -	*
 
--	(AM-ADV*
 -	*
 -	*
 -	*
@@ -2770,7 +2769,8 @@ escolher	*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 -	(A1*
 -	*)
@@ -2793,13 +2793,13 @@ estar	(V*)
 
 -	*
 -	*
--	(AM-TMP*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -2820,7 +2820,7 @@ treinar	(V*)
 -	*)
 -	*
 
--	(A0*
+-	(A1*
 -	*
 -	*)
 subir	(V*)
@@ -2830,10 +2830,10 @@ subir	(V*)
 -	*)
 -	*
 
--	(A0*
 -	*
 -	*
--	*)
+-	*
+-	(A0*)
 -	(AM-NEG*)
 falar	(V*)
 -	(A1*
@@ -2859,12 +2859,12 @@ estimular	(V*)
 -	*
 -	*
 
+-	*
+-	*
+-	*
+-	*
+-	*
 -	(A0*
--	*
--	*
--	*
--	*
--	*
 -	*
 -	*
 -	*
@@ -2903,7 +2903,7 @@ trabalhar	(V*)
 -	*
 -	*)
 vir	(V*)
--	(A2*
+-	(C-A1*
 -	*
 -	*
 -	*
@@ -2959,7 +2959,7 @@ vir	(V*)
 -	*
 -	*
 compensar	(V*)
--	(A1*
+-	(A2*
 -	*
 -	*
 -	*
@@ -2978,30 +2978,30 @@ haver	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	*
 -	*
 -	*
--	(A1*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 substituir	(V*)
 -	(A1*
@@ -3070,10 +3070,10 @@ jogar	(V*)
 -	*
 
 -	(AM-DIS*
--	*
--	*
--	*
 -	*)
+-	*
+-	(A0*)
+-	(AM-NEG*)
 -	*
 avaliar	(V*)
 -	(A1*
@@ -3095,8 +3095,8 @@ avaliar	(V*)
 -	*
 -	*
 -	*
--	(A0*)
--	(AM-NEG*)
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -3125,14 +3125,14 @@ proibir	(V*)
 
 -	(A1*
 -	*
--	*
-estar	*
 -	*)
--	(AM-LOC*
--	*
--	*
--	*)
+estar	(V*)
 -	(A1*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -3147,9 +3147,9 @@ estar	*
 -	*
 -	*
 
--	(A1*
 -	*
--	*)
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -3166,15 +3166,15 @@ estar	*
 -	*
 -	*
 iniciar	(V*)
--	(A0*
--	*)
+-	(AM-TMP*
 -	*
+-	*)
 -	*
 
 -	(AM-PRD*
 -	*
--	*)
--	(A0*
+-	*
+-	*
 -	*
 -	*
 -	*)
@@ -3199,15 +3199,15 @@ inspirar	(V*)
 -	*)
 -	*
 
--	(A0*
--	*
--	*
--	*
--	*
--	*
--	*
--	*)
 -	(A1*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -3217,8 +3217,8 @@ inspirar	(V*)
 ver	(V*)
 -	(A1*
 -	*
--	*
--	*
+-	*)
+-	(AM-MNR*
 -	*
 -	*
 -	*
@@ -3254,12 +3254,12 @@ ficar	(V*)
 -	*)
 -	*
 dizer	(V*)
+-	(A2*
+-	*
+-	*
+-	*)
+-	*
 -	(A0*
--	*
--	*
--	*
--	*
--	*
 -	*
 -	*
 -	*)
@@ -3286,9 +3286,9 @@ afirmar	(V*)
 
 -	*
 -	*
-achar	(V*)
+achar	(V*
+-	*)
 -	(AM-LOC*
--	*
 -	*
 -	*)
 
@@ -3296,24 +3296,24 @@ achar	(V*)
 encontrar	(V*)
 -	(A1*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 
@@ -3325,14 +3325,14 @@ dizer	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	(A1*
@@ -3364,8 +3364,8 @@ sequestrar	(V*)
 -	*
 -	*
 -	(A0*
--	*
 -	*)
+-	*
 confundir	(V*)
 -	(AM-MNR*
 -	*)
@@ -3413,7 +3413,7 @@ receber	(V*)
 -	*)
 -	*
 
--	(AM-TMP*
+-	(AM-LOC*
 -	*
 -	*)
 -	*
@@ -3437,8 +3437,8 @@ realizar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
+-	(AM-LOC*
 -	*
 -	*)
 -	*
@@ -3448,10 +3448,10 @@ bater	(V*)
 -	(A1*)
 -	*
 -	*
--	(AM-MNR*
 -	*
 -	*
--	*)
+-	*
+-	*
 
 -	*
 -	*
@@ -3486,7 +3486,7 @@ ficar	(V*)
 -	*
 -	*
 -	*
--	(A0*)
+-	*
 contar	(V*)
 -	(A2*
 -	*
@@ -3502,7 +3502,7 @@ contar	(V*)
 -	*)
 -	*
 
--	(AM-DIS*
+-	(A1*
 -	*
 -	*
 -	*
@@ -3511,6 +3511,7 @@ contar	(V*)
 -	*)
 ficar	(V*)
 -	(A2*
+-	*
 -	*
 -	*
 -	*
@@ -3535,27 +3536,26 @@ ficar	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
 -	*
 -	*
 
--	(A0*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*)
 -	*
 -	*
--	(A0*
 -	*
 -	*
--	*)
+-	*
+-	*
+-	*
+-	*
 derrotar	(V*)
 -	(AM-TMP*
 -	*
@@ -3563,9 +3563,9 @@ derrotar	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
 -	*)
--	*
--	*
 -	*
 -	*
 -	*
@@ -3670,10 +3670,10 @@ afirmar	(V*)
 -	*
 -	*)
 representar	(V*)
--	(A1*
--	*
--	*)
 -	(A2*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -3707,12 +3707,12 @@ gostar	(V*)
 resolver	(V*)
 -	(A1*
 -	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	*
@@ -3747,11 +3747,11 @@ fazer	(V*)
 -	*)
 -	*
 
--	(AM-MNR*
 -	*
 -	*
-encaixar	*
 -	*
+encaixar	(V*)
+-	(A2*
 -	*
 -	*
 -	*
@@ -3761,7 +3761,7 @@ encaixar	*
 
 -	*
 ter	(V*)
--	(AM-MNR*
+-	(AM-EXT*
 -	*
 -	*)
 -	*
@@ -3808,12 +3808,12 @@ mudar	(V*)
 -	*
 -	*
 
--	(A0*
 -	*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -3879,7 +3879,6 @@ oferecer	(V*)
 -	(A2*
 -	*)
 -	*
--	(AM-PNC*
 -	*
 -	*
 -	*
@@ -3888,7 +3887,8 @@ oferecer	(V*)
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 
 causar	(V*)
@@ -3962,10 +3962,10 @@ tratar	(V*)
 -	*
 
 chegar	(V*)
+-	(A1*)
+-	*
+-	*
 -	(AM-TMP*
--	*
--	*
--	*
 -	*
 -	*
 -	*
@@ -3987,7 +3987,7 @@ chegar	(V*)
 -	*
 -	*
 sair	(V*)
--	(A2*
+-	(AM-TMP*
 -	*
 -	*
 -	*)
@@ -3998,22 +3998,22 @@ sair	(V*)
 -	*
 -	*
 -	*
--	(A0*
 -	*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	(A0*)
 fazer	(V*)
 -	(A1*
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -4054,11 +4054,11 @@ fazer	(V*)
 -	*
 -	(A0*)
 pagar	(V*)
--	(A2*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 
 -	*
@@ -4105,7 +4105,6 @@ pôr	(V*)
 -	*
 -	*
 -	*)
--	(A2*
 -	*
 -	*
 -	*
@@ -4118,7 +4117,8 @@ pôr	(V*)
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 
 -	*
@@ -4187,15 +4187,15 @@ dirigir	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
 -	*)
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
 
--	(AM-DIS*
+-	(A1*
 -	*)
 estar	(V*)
 -	(A2*
@@ -4227,14 +4227,14 @@ estar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	*
@@ -4246,14 +4246,14 @@ estar	(V*)
 -	*
 -	*
 -	*
--	(AM-CAU*
 -	*
 -	*
 -	*
 -	*
--	*)
--	(A0*
--	*)
+-	*
+-	*
+-	*
+-	*
 -	(AM-NEG*)
 resistir	(V*)
 -	(A2*
@@ -4261,15 +4261,15 @@ resistir	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -4311,48 +4311,6 @@ pagar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*)
--	*
--	*
--	*
-
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
-filmar	(V*)
--	(A1*
 -	*)
 -	*
 -	*
@@ -4363,22 +4321,62 @@ filmar	(V*)
 -	*
 -	*
 
--	(AM-ADV*
 -	*
--	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+filmar	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
 -	*
 -	*
 fazer	(V*)
--	(A2*
+-	(A1*
 -	*
 -	*
--	*
--	*
--	*
--	*
+-	*)
+-	(AM-LOC*
 -	*
 -	*
 -	*
@@ -4394,8 +4392,9 @@ fazer	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
 
--	(AM-ADV*
 -	*
 -	*
 -	*
@@ -4406,6 +4405,7 @@ fazer	(V*)
 -	*
 -	*
 -	*
+-	(A1*
 -	*
 -	*
 -	*
@@ -4463,9 +4463,9 @@ ver	(V*)
 -	(A0*
 -	*)
 jogar	(V*)
--	(A1*
+-	(A1*)
 -	*
--	*)
+-	*
 -	*
 -	*
 -	*
@@ -4480,7 +4480,6 @@ vencer	(V*)
 
 -	(AM-ADV*)
 bastar	(V*)
--	(A1*
 -	*
 -	*
 -	*
@@ -4495,7 +4494,8 @@ bastar	(V*)
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 
 -	*
@@ -4521,13 +4521,13 @@ chegar	(V*)
 -	(A0*
 -	*)
 ancorar	(V*)
--	(A2*
+-	(AM-LOC*
+-	*
+-	*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
+-	(A1*
 -	*
 -	*
 -	*
@@ -4577,11 +4577,11 @@ querer	(V*)
 -	(AM-TMP*
 -	*
 -	*
--	*)
--	(A1*
 -	*
 -	*
 -	*)
+-	*
+-	*
 -	*
 
 -	(A1*
@@ -4687,10 +4687,10 @@ chegar	(V*)
 -	*
 -	*
 -	*
--	(A1*
--	*
+-	(AM-LOC*
 -	*
 -	*)
+-	*
 -	*
 
 -	(A0*
@@ -4733,7 +4733,7 @@ estar	(V*)
 -	*
 -	(A0*)
 apreciar	(V*)
--	(A1*
+-	(A1*)
 -	*
 -	*
 -	*
@@ -4742,20 +4742,20 @@ apreciar	(V*)
 -	*
 -	*
 -	*
--	*)
+-	*
 -	*
 
 -	(A1*
 -	*)
 -	(AM-NEG*)
 existir	(V*)
--	(A1*
--	*
--	*)
--	(AM-LOC*
 -	*
 -	*
--	*)
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -4768,27 +4768,27 @@ existir	(V*)
 -	*
 -	*
 
--	(A0*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+engatinhar	(V*)
+-	(AM-TMP*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
-engatinhar	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
+-	(AM-LOC*
+-	*)
 -	*
 
 -	*
@@ -4814,30 +4814,20 @@ aparecer	(V*)
 -	*)
 -	*
 
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	(A0*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
 querer	(V*)
 -	(A1*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
+-	*)
+-	(AM-PRD*
 -	*
 -	*
 -	*
@@ -4857,6 +4847,16 @@ querer	(V*)
 -	*
 -	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	(A0*)
@@ -4880,9 +4880,9 @@ dizer	(V*)
 -	*
 -	*
 -	*
+-	(AM-PNC*
 -	*
--	*
--	*
+-	*)
 -	*
 formar	(V*)
 -	(A1*
@@ -4891,17 +4891,17 @@ formar	(V*)
 -	*)
 -	*
 
--	(A0*
--	*)
+-	*
+-	(A0*)
 ter	(V*)
--	(A1*
+-	(A1*)
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*)
+-	*
 
 -	(A0*
 -	*)
@@ -4959,8 +4959,8 @@ abastecer	(V*)
 -	(A1*
 -	*
 -	*
--	*
--	*
+-	*)
+-	(AM-TMP*
 -	*
 -	*)
 -	*
@@ -4991,8 +4991,8 @@ abastecer	(V*)
 -	*
 -	*
 -	*
--	*
 -	*)
+-	*
 -	*
 dizer	(V*)
 -	(A0*
@@ -5055,7 +5055,7 @@ estar	(V*)
 -	*)
 -	*
 
--	*
+-	(A0*)
 -	*
 -	*
 -	*
@@ -5079,13 +5079,13 @@ estimular	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	*
@@ -5097,15 +5097,15 @@ estimular	(V*)
 -	*
 -	*
 -	*
--	(AM-CAU*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 promover	(V*)
+-	(C-V*)
 -	(A1*
--	*
 -	*
 -	*)
 -	*
