--- a/lr5.00e-03_hs32_ctx-p1/valid-eval.props
+++ b/lr5.00e-03_hs32_ctx-p1/valid-eval.props
@@ -5,15 +5,15 @@
 -	*
 -	*)
 desconhecer	(V*)
+-	*
+-	(AM-LOC*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*)
 -	(A1*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 -	*
 -	*
@@ -71,11 +71,11 @@ sonhar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -102,21 +102,21 @@ chegar	(V*)
 -	*)
 -	*
 -	*
--	(A1*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 
 passar	(V*)
 -	(C-V*)
--	(A1*
+-	(A2*
+-	*
 -	*
 -	*
 -	*
 -	*
 -	*)
--	*
 -	*
 -	*
 -	*
@@ -135,8 +135,8 @@ passar	(V*)
 -	*
 -	*
 -	*
--	(A0*
--	*)
+-	*
+-	*
 -	(AM-REC*)
 realizar	(V*)
 -	*
@@ -163,10 +163,10 @@ realizar	(V*)
 -	*
 trazer	(V*)
 -	(A1*
--	*)
--	(AM-DIS*)
 -	*
--	(AM-TMP*)
+-	*)
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -185,12 +185,12 @@ vir	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -266,7 +266,7 @@ ficar	(V*)
 -	*
 -	*
 subir	(V*)
--	(A1*
+-	(A4*
 -	*
 -	*
 -	*
@@ -275,8 +275,8 @@ subir	(V*)
 
 -	(A0*
 -	*)
-pedir	(V*)
--	(A1*)
+pedir	*
+-	*
 -	*
 -	*
 -	*
@@ -375,8 +375,8 @@ garantir	(V*)
 -	*
 produzir	(V*)
 -	(A0*
--	*
--	*
+-	*)
+-	(AM-LOC*
 -	*
 -	*
 -	*
@@ -411,8 +411,8 @@ ter	(V*)
 -	*
 -	*
 -	*
--	*
 -	*)
+-	*
 -	*
 explicar	(V*)
 -	*
@@ -422,7 +422,7 @@ explicar	(V*)
 -	*
 -	*
 -	*
--	*
+-	(AM-NEG*)
 -	*
 fixar	(V*)
 -	(A2*
@@ -490,30 +490,30 @@ ter	(V*)
 -	*
 
 -	*
+-	(A1*
+-	*
+-	*
+-	*)
 -	(AM-MNR*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
 -	*)
 -	*
 -	*
-reajustar	(V*)
--	(A1*
+reajustar	*
 -	*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	(AM-TMP*
 -	*
 -	*
--	*
 -	*)
+-	*
 -	*
 -	*
 -	*
@@ -537,7 +537,7 @@ dizer	(V*)
 
 -	*
 beneficiar	(V*)
--	(AM-TMP*
+-	(AM-EXT*
 -	*
 -	*
 -	*
@@ -572,8 +572,8 @@ demorar	*
 -	*
 -	*
 -	*
--	*
 -	*)
+-	*
 
 -	*
 -	*
@@ -611,7 +611,6 @@ ter	(V*)
 -	*
 -	*)
 -	*
--	(AM-DIS*
 -	*
 -	*
 -	*
@@ -619,7 +618,8 @@ ter	(V*)
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -647,29 +647,29 @@ ter	(V*)
 -	*
 -	*
 -	*
--	(A0*)
+-	*
 dizer	(V*)
 -	(A1*
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	*
@@ -812,11 +812,11 @@ fazer	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
 -	*)
--	(A0*
+-	(A4*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -860,32 +860,32 @@ atacar	(V*)
 -	*
 -	*
 -	*
+-	*
 -	*)
--	(AM-TMP*)
 -	(AM-NEG*)
 ter	(V*)
--	(A2*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
+-	(A1*
 -	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	*
@@ -896,19 +896,19 @@ ter	(V*)
 -	*
 -	*
 -	*
--	(A1*
 -	*
+-	(A1*
 -	*)
 -	*
 ficar	(V*)
 -	(A2*
--	*
--	*
--	*
--	*
--	*
 -	*)
 -	(AM-TMP*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -1058,7 +1058,7 @@ levantar	(V*)
 -	*
 -	*
 confirmar	(V*)
--	(A1*
+-	(AM-LOC*
 -	*
 -	*)
 -	*
@@ -1092,8 +1092,8 @@ acusar	(V*)
 -	*
 -	*
 -	*
--	*)
 -	*
+-	*)
 -	*
 comparecer	(V*)
 -	(AM-TMP*
@@ -1111,14 +1111,14 @@ comparecer	(V*)
 -	*
 -	*
 acusar	(V*)
--	(A2*
+-	(A1*
 -	*)
 -	*
 
 -	*
 -	*
 condenar	(V*)
--	(A2*
+-	(AM-LOC*
 -	*
 -	*
 -	*
@@ -1294,6 +1294,11 @@ faltar	(V*)
 -	*
 viver	(V*)
 -	(A1*
+-	*)
+-	(A2*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -1301,12 +1306,7 @@ viver	(V*)
 -	*
 -	*)
 -	*
--	(AM-TMP*
--	*
--	*
--	*
--	*
--	*
+-	(AM-LOC*
 -	*
 -	*
 -	*
@@ -1330,15 +1330,15 @@ viver	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
+-	*)
+-	(AM-TMP*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*)
+-	*
 dizer	(V*)
 -	(A1*
 -	*
@@ -1380,9 +1380,9 @@ dizer	(V*)
 -	*
 -	*
 faltar	(V*)
--	(A1*
+-	(A1*)
 -	*
--	*)
+-	*
 -	*
 -	*
 -	*
@@ -1402,8 +1402,8 @@ ter	(V*)
 -	*
 -	*
 -	*
--	*)
--	(AM-TMP*
+-	*
+-	*
 -	*
 -	*
 -	*)
@@ -1420,13 +1420,13 @@ ter	(V*)
 renovar	(V*)
 -	(A1*
 -	*
+-	*
+-	*
 -	*)
+-	(AM-TMP*
 -	*
 -	*
--	*
--	*
--	*
--	*
+-	*)
 -	*
 
 -	*
@@ -1434,14 +1434,14 @@ renovar	(V*)
 -	(A1*)
 acontecer	(V*)
 -	*
--	(V*)
--	(A1*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -1452,11 +1452,11 @@ acontecer	(V*)
 
 -	(A1*
 -	*
--	*)
 -	*
 -	*
 -	*
--	(A1*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -1484,26 +1484,26 @@ saber	(V*)
 -	*
 -	*
 -	*
+-	*)
 -	*
--	*
--	*
+-	(AM-LOC*
 -	*)
 -	*
 -	(A0*)
 começar	(V*)
 -	(A1*
 -	*
--	*
--	*
--	*
--	*
 -	*)
--	(AM-TMP*
+-	(AM-LOC*
 -	*
 -	*
 -	*
--	*)
--	(A1*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -1582,9 +1582,9 @@ disputar	(V*)
 -	*
 -	*
 terminar	(V*)
+-	(AM-LOC*
 -	*
--	*
--	*
+-	*)
 -	*
 
 -	(A0*)
@@ -1620,8 +1620,8 @@ apresentar	(V*)
 -	(A1*
 -	*
 -	*
--	*
--	*
+-	*)
+-	(AM-LOC*
 -	*
 -	*)
 -	*
@@ -1652,7 +1652,7 @@ descumprir	(V*)
 -	*
 -	*
 chegar	(V*)
--	(A1*
+-	(AM-EXT*
 -	*
 -	*
 -	*)
@@ -1705,27 +1705,27 @@ instalar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	(A1*
@@ -1779,7 +1779,7 @@ aconselhar	(V*)
 -	*
 -	*
 conversar	(V*)
--	(A1*
+-	(A2*
 -	*
 -	*)
 -	*
@@ -1831,9 +1831,18 @@ perder	(V*)
 -	*
 -	*
 fazer	(V*)
--	(AM-MNR*
+-	(A1*
+-	*)
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+
+-	(A1*
 -	*
 -	*)
 -	*
@@ -1841,21 +1850,12 @@ fazer	(V*)
 -	*
 -	*
 -	*
-
+-	*
+-	(A1*
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
+-	*)
 -	*
 -	*
 -	*
@@ -1870,13 +1870,13 @@ criticar	(V*)
 cumprir	(V*)
 -	(A1*
 -	*
--	*)
--	(AM-CAU*
--	*
--	*
 -	*
 -	*
 -	*)
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 
@@ -1888,8 +1888,8 @@ cumprir	(V*)
 preferir	(V*)
 -	(A1*
 -	*
--	*
 -	*)
+-	*
 
 -	*
 -	*
@@ -1910,8 +1910,8 @@ ter	(V*)
 -	*
 -	*
 -	*
--	*
 -	*)
+-	*
 -	*
 
 -	*
@@ -2022,13 +2022,13 @@ simpatizar	(V*)
 -	*
 -	*
 -	*
+-	(AM-PRD*
 -	*
 -	*
 -	*
 -	*
+-	*)
 -	(A0*
--	*
--	*
 -	*
 -	*)
 ganhar	(V*)
@@ -2094,9 +2094,9 @@ haver	(V*)
 -	*
 -	*
 -	*
--	(AM-CAU*
 -	*
--	*
+-	(A1*)
+-	(AM-TMP*
 -	*
 -	*)
 -	(AM-REC*)
@@ -2107,10 +2107,10 @@ separar	(V*)
 -	(A1*)
 ocorrer	(V*)
 -	*
--	(V*)
--	(AM-TMP*
 -	*
 -	*
+-	*
+-	(AM-LOC*
 -	*
 -	*
 -	*
@@ -2165,7 +2165,7 @@ chegar	(V*)
 -	*
 -	*
 dar	(V*)
--	(A1*)
+-	*
 -	*
 -	*
 -	*
@@ -2197,11 +2197,11 @@ dar	(V*)
 
 -	*
 -	*
+-	(A1*
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 -	*
 -	*
@@ -2315,9 +2315,9 @@ reduzir	(V*)
 -	*)
 -	*
 dizer	(V*)
--	(A0*
+-	(A0*)
 -	*
--	*)
+-	*
 -	*
 
 -	(A1*
@@ -2328,18 +2328,18 @@ estar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -2370,7 +2370,7 @@ estar	(V*)
 -	(A0*
 -	*)
 ir	(V*)
--	(AM-MNR*
+-	(AM-PNC*
 -	*
 -	*)
 -	*
@@ -2443,9 +2443,9 @@ estar	(V*)
 -	*)
 -	*
 -	*
+-	(AM-LOC*
 -	*
--	*
--	*
+-	*)
 -	*
 
 -	(AM-TMP*
@@ -2460,12 +2460,12 @@ estar	(V*)
 -	*
 -	*
 -	*
+-	(AM-LOC*
 -	*
 -	*
 -	*
--	*
+-	*)
 -	(A0*
--	*
 -	*
 -	*
 -	*
@@ -2521,7 +2521,7 @@ firmar	(V*)
 -	*
 -	(A0*)
 valer	(V*)
--	(A1*
+-	(AM-TMP*
 -	*
 -	*
 -	*
@@ -2529,7 +2529,7 @@ valer	(V*)
 -	*)
 -	*
 
--	(AM-TMP*
+-	(AM-LOC*
 -	*
 -	*)
 -	*
@@ -2556,7 +2556,7 @@ crescer	(V*)
 -	*
 -	*
 
--	(AM-TMP*
+-	(AM-LOC*
 -	*
 -	*)
 -	*
@@ -2574,8 +2574,8 @@ elevar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
+-	(C-A1*
 -	*
 -	*
 -	*
@@ -2724,13 +2724,13 @@ estar	(V*)
 -	*
 -	*
 -	*
--	(AM-TMP*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 
 -	*
@@ -2746,7 +2746,7 @@ estar	(V*)
 -	*
 -	*
 -	*
-escolher	(V*)
+escolher	*
 -	*
 -	*
 -	*
@@ -2812,7 +2812,7 @@ estar	(V*)
 -	*
 -	*
 -	*
--	(A0*
+-	(A1*
 -	*)
 treinar	(V*)
 -	(AM-TMP*
@@ -2820,7 +2820,7 @@ treinar	(V*)
 -	*)
 -	*
 
--	(A0*
+-	(A1*
 -	*
 -	*)
 subir	(V*)
@@ -2830,13 +2830,13 @@ subir	(V*)
 -	*)
 -	*
 
--	(A0*
 -	*
 -	*
--	*)
+-	*
+-	(A0*)
 -	(AM-NEG*)
 falar	(V*)
--	(AM-MNR*
+-	(A1*
 -	*
 -	*)
 -	*
@@ -2853,10 +2853,10 @@ estimular	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
 -	*
 
 -	*
@@ -2903,7 +2903,7 @@ trabalhar	(V*)
 -	*
 -	*)
 vir	(V*)
--	(A2*
+-	(C-A1*
 -	*
 -	*
 -	*
@@ -2959,7 +2959,7 @@ vir	(V*)
 -	*
 -	*
 compensar	(V*)
--	(A1*
+-	(A2*
 -	*
 -	*
 -	*
@@ -2978,20 +2978,20 @@ haver	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	*
@@ -3072,8 +3072,8 @@ jogar	(V*)
 -	(AM-DIS*
 -	*)
 -	*
--	*
--	*
+-	(A0*)
+-	(AM-NEG*)
 -	*
 avaliar	(V*)
 -	(A1*
@@ -3171,7 +3171,7 @@ iniciar	(V*)
 -	*)
 -	*
 
--	(A0*
+-	(AM-PRD*
 -	*
 -	*
 -	*
@@ -3199,15 +3199,15 @@ inspirar	(V*)
 -	*)
 -	*
 
--	(A0*
--	*
--	*
--	*
--	*
--	*
--	*
--	*)
 -	(A1*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -3217,8 +3217,8 @@ inspirar	(V*)
 ver	(V*)
 -	(A1*
 -	*
--	*
--	*
+-	*)
+-	(AM-MNR*
 -	*
 -	*
 -	*
@@ -3254,12 +3254,12 @@ ficar	(V*)
 -	*)
 -	*
 dizer	(V*)
+-	(A2*
+-	*
+-	*
+-	*)
+-	*
 -	(A0*
--	*
--	*
--	*
--	*
--	*
 -	*
 -	*
 -	*)
@@ -3286,9 +3286,9 @@ afirmar	(V*)
 
 -	*
 -	*
-achar	(V*)
+achar	(V*
+-	*)
 -	(AM-LOC*
--	*
 -	*
 -	*)
 
@@ -3296,24 +3296,24 @@ achar	(V*)
 encontrar	(V*)
 -	(A1*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 
@@ -3325,14 +3325,14 @@ dizer	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	(A1*
@@ -3364,8 +3364,8 @@ sequestrar	(V*)
 -	*
 -	*
 -	(A0*
--	*
 -	*)
+-	*
 confundir	(V*)
 -	(AM-MNR*
 -	*)
@@ -3393,7 +3393,7 @@ receber	(V*)
 -	*)
 -	*
 receber	(V*)
--	(AM-TMP*
+-	(A4*
 -	*
 -	*
 -	*
@@ -3401,8 +3401,8 @@ receber	(V*)
 -	*
 -	*
 -	*
--	*)
--	(A0*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -3413,7 +3413,7 @@ receber	(V*)
 -	*)
 -	*
 
--	(AM-TMP*
+-	(AM-LOC*
 -	*
 -	*)
 -	*
@@ -3437,8 +3437,8 @@ realizar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
+-	(AM-LOC*
 -	*
 -	*)
 -	*
@@ -3486,9 +3486,9 @@ ficar	(V*)
 -	*
 -	*
 -	*
--	(A0*)
+-	*
 contar	(V*)
--	(A1*
+-	(A2*
 -	*
 -	*
 -	*
@@ -3502,7 +3502,7 @@ contar	(V*)
 -	*)
 -	*
 
--	(AM-DIS*
+-	(A1*
 -	*
 -	*
 -	*
@@ -3515,8 +3515,11 @@ ficar	(V*)
 -	*
 -	*
 -	*
--	*)
--	(AM-TMP*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -3525,9 +3528,6 @@ ficar	(V*)
 -	*
 -	*)
 -	(AM-PRD*
--	*
--	*
--	*
 -	*
 -	*
 -	*
@@ -3565,22 +3565,22 @@ derrotar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 
@@ -3598,10 +3598,10 @@ marcar	(V*)
 -	*)
 -	*
 
--	(AM-ADV*
+-	(A1*
 -	*
--	*)
--	(A0*
+-	*
+-	*
 -	*
 -	*
 -	*)
@@ -3621,13 +3621,13 @@ participar	(V*)
 -	*)
 -	*
 
--	(AM-DIS*
+-	(A2*
+-	*
+-	*
 -	*
 -	*
 -	*
 -	*)
--	*
--	(A0*)
 estar	(V*)
 -	(A2*
 -	*
@@ -3670,7 +3670,7 @@ afirmar	(V*)
 -	*
 -	*)
 representar	(V*)
--	(A1*
+-	(A2*
 -	*
 -	*
 -	*
@@ -3707,12 +3707,12 @@ gostar	(V*)
 resolver	(V*)
 -	(A1*
 -	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	*
@@ -3751,7 +3751,7 @@ fazer	(V*)
 -	*
 -	*
 encaixar	(V*)
--	(AM-MNR*
+-	(A2*
 -	*
 -	*
 -	*
@@ -3759,9 +3759,9 @@ encaixar	(V*)
 -	*)
 -	*
 
--	(AM-TMP*)
+-	*
 ter	(V*)
--	(AM-MNR*
+-	(AM-EXT*
 -	*
 -	*)
 -	*
@@ -3883,12 +3883,12 @@ oferecer	(V*)
 -	*
 -	*
 -	*
--	(V*)
--	(A1*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
+-	*
 -	*
 
 causar	(V*)
@@ -3909,12 +3909,12 @@ causar	(V*)
 -	*
 -	*
 -	*
--	*)
--	(AM-TMP*
+-	*
+-	*
+-	*
 -	*
 -	*)
 -	(AM-CAU*
--	*
 -	*
 -	*
 -	*
@@ -3962,10 +3962,10 @@ tratar	(V*)
 -	*
 
 chegar	(V*)
+-	(A1*)
+-	*
+-	*
 -	(AM-TMP*
--	*
--	*
--	*
 -	*
 -	*
 -	*
@@ -4009,11 +4009,11 @@ fazer	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -4054,11 +4054,11 @@ fazer	(V*)
 -	*
 -	(A0*)
 pagar	(V*)
--	(A2*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 
 -	*
@@ -4104,21 +4104,21 @@ pôr	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	*
@@ -4187,15 +4187,15 @@ dirigir	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
 -	*)
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
 
--	(AM-DIS*
+-	(A1*
 -	*)
 estar	(V*)
 -	(A2*
@@ -4227,12 +4227,12 @@ estar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -4248,28 +4248,28 @@ estar	(V*)
 -	*
 -	*
 -	*
--	(A0*
 -	*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	(AM-NEG*)
 resistir	(V*)
--	(A1*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
+-	(A2*
 -	*
 -	*
 -	*
 -	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -4311,12 +4311,12 @@ pagar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -4351,7 +4351,7 @@ pagar	(V*)
 -	*
 -	*
 -	*
-filmar	(V*)
+filmar	*
 -	*
 -	*
 -	*
@@ -4372,17 +4372,17 @@ filmar	(V*)
 -	*
 -	*
 fazer	(V*)
--	(A2*
+-	(A1*
 -	*
 -	*
--	*
--	*
--	*
+-	*)
+-	(AM-LOC*
 -	*
 -	*
 -	*
 -	*
 -	*)
+-	*
 -	*
 -	*
 -	*
@@ -4403,6 +4403,8 @@ fazer	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
 -	(A1*
 -	*
 -	*
@@ -4412,10 +4414,8 @@ fazer	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
 -	*)
+-	*
 -	*
 confirmar	(V*)
 -	(A1*
@@ -4428,7 +4428,7 @@ confirmar	(V*)
 -	*
 
 ver	(V*)
--	(A1*
+-	(A2*
 -	*
 -	*
 -	*
@@ -4463,9 +4463,9 @@ ver	(V*)
 -	(A0*
 -	*)
 jogar	(V*)
--	(AM-MNR*
+-	(A1*)
 -	*
--	*)
+-	*
 -	*
 -	*
 -	*
@@ -4478,10 +4478,9 @@ vencer	(V*)
 -	*)
 -	*
 
--	(AM-TMP*)
+-	(AM-ADV*)
 bastar	(V*)
 -	*
--	(AM-CAU*
 -	*
 -	*
 -	*
@@ -4495,7 +4494,8 @@ bastar	(V*)
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 
 -	*
@@ -4549,7 +4549,7 @@ ancorar	(V*)
 -	(A0*
 -	*)
 tornar	(V*)
--	(A1*
+-	(A2*
 -	*
 -	*
 -	*
@@ -4573,7 +4573,7 @@ haver	(V*)
 -	(A0*)
 querer	(V*)
 -	*
--	(V*)
+-	*
 -	(AM-TMP*
 -	*
 -	*
@@ -4584,18 +4584,18 @@ querer	(V*)
 -	*
 -	*
 
--	(A0*)
--	*
+-	(A1*
+-	*)
 -	*
 ir	(V*)
--	(AM-TMP*
+-	(AM-LOC*
+-	*
+-	*
 -	*
 -	*
 -	*
 -	*
 -	*)
--	*
--	*
 -	*
 
 -	*
@@ -4687,7 +4687,7 @@ chegar	(V*)
 -	*
 -	*
 -	*
--	(AM-MNR*
+-	(AM-LOC*
 -	*
 -	*)
 -	*
@@ -4712,9 +4712,9 @@ discordar	(V*)
 -	*
 -	*
 -	*
-jogar	(V*
--	*)
--	(A1*
+jogar	(V*)
+-	(A2*
+-	*
 -	*)
 -	*
 
@@ -4733,7 +4733,7 @@ estar	(V*)
 -	*
 -	(A0*)
 apreciar	(V*)
--	(A1*
+-	(A1*)
 -	*
 -	*
 -	*
@@ -4742,22 +4742,22 @@ apreciar	(V*)
 -	*
 -	*
 -	*
--	*)
+-	*
 -	*
 
 -	(A1*
 -	*)
 -	(AM-NEG*)
 existir	(V*)
--	(A1*
--	*
--	*)
--	(AM-TMP*
 -	*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -4780,15 +4780,15 @@ existir	(V*)
 -	*
 -	*
 engatinhar	(V*)
--	(AM-TMP*)
+-	(AM-TMP*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
--	*
+-	*)
+-	(AM-LOC*
+-	*)
 -	*
 
 -	*
@@ -4819,8 +4819,8 @@ aparecer	(V*)
 -	*
 -	*
 -	*
--	(A0*
 -	*
+-	(A0*
 -	*)
 querer	(V*)
 -	(A1*
@@ -4846,17 +4846,17 @@ querer	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	(A0*)
@@ -4880,9 +4880,9 @@ dizer	(V*)
 -	*
 -	*
 -	*
+-	(AM-PNC*
 -	*
--	*
--	*
+-	*)
 -	*
 formar	(V*)
 -	(A1*
@@ -4894,14 +4894,14 @@ formar	(V*)
 -	*
 -	(A0*)
 ter	(V*)
--	(A1*
+-	(A1*)
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*)
+-	*
 
 -	(A0*
 -	*)
@@ -4959,8 +4959,8 @@ abastecer	(V*)
 -	(A1*
 -	*
 -	*
--	*
--	*
+-	*)
+-	(AM-TMP*
 -	*
 -	*)
 -	*
@@ -4991,8 +4991,8 @@ abastecer	(V*)
 -	*
 -	*
 -	*
--	*
 -	*)
+-	*
 -	*
 dizer	(V*)
 -	(A0*
@@ -5055,7 +5055,7 @@ estar	(V*)
 -	*)
 -	*
 
--	*
+-	(A0*)
 -	*
 -	*
 -	*
@@ -5083,9 +5083,9 @@ estimular	(V*)
 -	*
 -	*
 -	*
--	(A1*
 -	*
--	*)
+-	*
+-	*
 -	*
 
 -	*
